--- a/index.html
+++ b/index.html
@@ -22,15 +22,16 @@
     document.querySelector(".preview-section").style.backgroundColor = "#555";
   }
 </script>
-  <div class="container mt-5 text-center" id="main">
-  <div class="theme-container">
-    <div class="dark-btn">
-      <i class="fa fa-moon-o" style="font-size:24px; color: #fdd522;"></i>
-    </div>
-    <div class="light-btn">
-      <i class="fa fa-sun-o" style="font-size:24px; color: #ff6d05;"></i>
-    </div>
+<div class="spcthm"></div>
+<div class="theme-container">
+  <div class="dark-btn">
+    <i class="fa fa-moon-o" style="font-size:24px; color: #fdd522;"></i>
   </div>
+  <div class="light-btn">
+    <i class="fa fa-sun-o" style="font-size:24px; color: #ff6d05;"></i>
+  </div>
+</div>
+  <div class="container mt-5 text-center" id="main">
   <h1>Welcome to Skriza <img src="img/Skriza_Icons-02_transparent.png" class="skrizalogo" alt="logo"></h1>
   <p class="lead">
     Redefining the way opinions are shared and discussed online.
