--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 <div class="theme-container">
 </div>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark">
   <a class="navbar-brand" href="#">Skriza</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -77,7 +77,7 @@
   </div>
 </div>
 <footer class="mt-5">
-  <a href="/imprint" class="text-muted"><i class="fas fa-info-circle"></i> Legal Notice</a> |
+  <a href="/imprint" class="text-muted"><i class="fas fa-info-circle"></i> Legal Notice</a> <a href="#" class="text-muted">|</a>
   <a href="/privacy" class="text-muted"><i class="fas fa-user-secret"></i> Privacy Policy</a>
 </footer>
 
