--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="javascript:void(0);"><i class="fas fa-home"></i> Home</a>
+        <a class="nav-link" href="/index"><i class="fas fa-home"></i> Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="javascript:void(0);"><i class="fas fa-info-circle"></i> Introduction</a>
+        <a class="nav-link" href="/introduction"><i class="fas fa-info-circle"></i> Introduction</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="javascript:void(0);"><i class="fas fa-envelope"></i> Contact Us</a>
+        <a class="nav-link" href="mailto:contact@skriza.com"><i class="fas fa-envelope"></i> Contact Us</a>
       </li>
       <li class="nav-item">
         <a class="nav-link theme-switcher" href="javascript:void(0);">
