--- a/introduction.html
+++ b/introduction.html
@@ -13,24 +13,39 @@
 </head>
 
 <body>
+<div class="theme-container"></div>
 
-<script>
-  // Check the preferred mode in localStorage and apply it immediately
-  if (localStorage.getItem("theme") === "dark") {
-    document.body.style.backgroundColor = "#333";
-    document.querySelector(".container").style.backgroundColor = "#444";
-  }
-</script>
-
-<div class="container mt-5 text-center" id="main">
-  <div class="theme-container mb-5">
-    <div class="dark-btn">
-      <i class="fa fa-moon-o" style="font-size:24px; color: #fdd522;"></i>
-    </div>
-    <div class="light-btn">
-      <i class="fa fa-sun-o" style="font-size:24px; color: #ff6d05;"></i>
-    </div>
+<nav class="navbar navbar-expand-lg navbar-dark">
+  <a class="navbar-brand" href="#">Skriza</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="/index"><i class="fas fa-home"></i> Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/introduction"><i class="fas fa-info-circle"></i> Introduction</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="mailto:contact@skriza.com"><i class="fas fa-envelope"></i> Contact Us</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link theme-switcher" href="javascript:void(0);">
+          <div class="dark-btn">
+            <i class="fa fa-moon-o"></i>
+          </div>
+          <div class="light-btn">
+            <i class="fa fa-sun-o"></i>
+          </div>
+        </a>
+      </li>
+    </ul>
   </div>
+</nav>
+
+<div class="main-content mt-5 text-center">
   <h1>Introduction to Skriza</h1>
   <p class="lead">
     Skriza is revolutionizing the way opinions are exchanged and discussed online.
@@ -60,11 +75,40 @@
   <a href="/privacy" class="text-muted"><i class="fas fa-user-secret"></i> Privacy Policy</a>
 </footer>
 
+<!-- Bootstrap JS, Popper.js, and jQuery -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script src="js/slideshow.js"></script>
 <script src="js/switcher.js"></script>
-</body>
 
+<!-- Dark/Light Mode Toggle Script -->
+<script>
+  function updateTheme() {
+    const isDarkMode = document.body.classList.contains("dark-mode");
+    const allTextElements = document.querySelectorAll("h1, h2, p, a, li");
+
+    if (isDarkMode) {
+      allTextElements.forEach(el => el.style.color = "white");
+      document.body.style.backgroundColor = "#333";
+    } else {
+      allTextElements.forEach(el => el.style.color = "black");
+      document.body.style.backgroundColor = "#ffffff";
+    }
+  }
+
+  document.querySelector(".dark-btn").addEventListener("click", function() {
+    document.body.classList.add("dark-mode");
+    updateTheme();
+  });
+
+  document.querySelector(".light-btn").addEventListener("click", function() {
+    document.body.classList.remove("dark-mode");
+    updateTheme();
+  });
+
+  // Initialize theme on page load
+  updateTheme();
+</script>
+</body>
 </html>
