--- a/privacy.html
+++ b/privacy.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Privacy Policy - Skriza</title>
-  <!-- Bootstrap CSS -->
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -14,24 +13,39 @@
 </head>
 
 <body>
+<div class="theme-container"></div>
 
-<script>
-  // Überprüfen Sie den bevorzugten Modus im localStorage und wenden Sie ihn sofort an
-  if (localStorage.getItem("theme") === "dark") {
-    document.body.style.backgroundColor = "#333";
-    document.querySelector(".container").style.backgroundColor = "#444";
-  }
-</script>
-
-<div class="container mt-5 text-center" id="main">
-  <div class="theme-container">
-    <div class="dark-btn">
-      <i class="fa fa-moon-o" style="font-size:24px; color: #fdd522;"></i>
-    </div>
-    <div class="light-btn">
-      <i class="fa fa-sun-o" style="font-size:24px; color: #ff6d05;"></i>
-    </div>
+<nav class="navbar navbar-expand-lg navbar-dark">
+  <a class="navbar-brand" href="#">Skriza</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="/index"><i class="fas fa-home"></i> Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/introduction"><i class="fas fa-info-circle"></i> Introduction</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="mailto:contact@skriza.com"><i class="fas fa-envelope"></i> Contact Us</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link theme-switcher" href="javascript:void(0);">
+          <div class="dark-btn">
+            <i class="fa fa-moon-o"></i>
+          </div>
+          <div class="light-btn">
+            <i class="fa fa-sun-o"></i>
+          </div>
+        </a>
+      </li>
+    </ul>
   </div>
+</nav>
+
+<div class="main-content mt-5 text-center">
   <h1>Privacy Policy</h1>
   <p class="lead">
     At Skriza, we respect your privacy and are committed to protecting it.
@@ -76,6 +90,34 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script src="js/slideshow.js"></script>
 <script src="js/switcher.js"></script>
-</body>
 
+<!-- Dark/Light Mode Toggle Script -->
+<script>
+  function updateTheme() {
+    const isDarkMode = document.body.classList.contains("dark-mode");
+    const allTextElements = document.querySelectorAll("h1, h2, p, a, li");
+
+    if (isDarkMode) {
+      allTextElements.forEach(el => el.style.color = "white");
+      document.body.style.backgroundColor = "#333";
+    } else {
+      allTextElements.forEach(el => el.style.color = "black");
+      document.body.style.backgroundColor = "#ffffff";
+    }
+  }
+
+  document.querySelector(".dark-btn").addEventListener("click", function() {
+    document.body.classList.add("dark-mode");
+    updateTheme();
+  });
+
+  document.querySelector(".light-btn").addEventListener("click", function() {
+    document.body.classList.remove("dark-mode");
+    updateTheme();
+  });
+
+  // Initialize theme on page load
+  updateTheme();
+</script>
+</body>
 </html>
