--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class="theme-container">
 </div>
 <nav class="navbar navbar-expand-lg navbar-dark">
-  <a class="navbar-brand" href="#">Skriza</a>
+  <a class="navbar-brand" href="https://skriza.com">Skriza</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
