--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class="theme-container">
 </div>
 <nav class="navbar navbar-expand-lg navbar-dark">
-  <h1><a class="navbar-brand" href="https://skriza.com">Skriza</a></h1>
+  <h1><a class="navbar-brand" href="https://skriza.com">Skriza.com</a></h1>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
