--- a/imprint.html
+++ b/imprint.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Legal Notice - Skriza</title>
+  <meta name="title" content="Skriza Legal Notice: Our Commitment to Transparency">
+  <meta name="description" content="Learn about Skriza's legal guidelines. We're committed to clear, transparent operations as we seek investors for our online discussion platform.">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -31,7 +33,7 @@
 <div class="theme-container"></div>
 
 <nav class="navbar navbar-expand-lg navbar-dark">
-  <a class="navbar-brand" href="#">Skriza</a>
+  <h1><a class="navbar-brand" href="https://skriza.com">Skriza.com</a></h1>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
