--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Skriza</title>
+  <meta name="title" content="Skriza: Revolutionizing Online Discussions | Seeking Investors">
+  <meta name="description" content="Join Skriza in reshaping online interactions. Discover a unique platform for meaningful online discussions. Investors wanted for our innovative journey.">
   <!-- Bootstrap CSS -->
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <!-- Font Awesome -->
