--- a/introduction.html
+++ b/introduction.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Introduction - Skriza</title>
+  <meta name="title" content="Introduction to Skriza: A New Era of Online Discussions">
+  <meta name="description" content="Skriza is set to redefine online interactions with sentiment analysis and user-driven content. Investors, explore our vision for meaningful online conversations and our commitment to user value.">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -16,7 +18,7 @@
 <div class="theme-container"></div>
 
 <nav class="navbar navbar-expand-lg navbar-dark">
-  <a class="navbar-brand" href="#">Skriza</a>
+  <h1><a class="navbar-brand" href="https://skriza.com">Skriza.com</a></h1>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
