--- a/imprint.html
+++ b/imprint.html
@@ -7,6 +7,7 @@
   <title>Legal Notice - Skriza</title>
   <meta name="title" content="Skriza Legal Notice: Our Commitment to Transparency">
   <meta name="description" content="Learn about Skriza's legal guidelines. We're committed to clear, transparent operations as we seek investors for our online discussion platform.">
+  <meta name="keywords" content="Skriza legal guidelines, online platform transparency, investor trust, online discussion platform, legal notice">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
