--- a/privacy.html
+++ b/privacy.html
@@ -7,6 +7,7 @@
   <title>Privacy Policy - Skriza</title>
   <meta name="title" content="Skriza Privacy Policy: Safeguarding Your Data">
   <meta name="description" content="At Skriza, we prioritize your privacy. As we revolutionize online discussions, learn how we protect user data and respect confidentiality. Investors can trust our commitment to security.">
+  <meta name="keywords" content="Skriza privacy, user data protection, online discussion privacy, investor data security, online interactions, user confidentiality">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
