--- a/introduction.html
+++ b/introduction.html
@@ -7,6 +7,8 @@
   <title>Introduction - Skriza</title>
   <meta name="title" content="Introduction to Skriza: A New Era of Online Discussions">
   <meta name="description" content="Skriza is set to redefine online interactions with sentiment analysis and user-driven content. Investors, explore our vision for meaningful online conversations and our commitment to user value.">
+  <meta name="keywords" content="online platform investors, online platform investment, online discussions, sentiment analysis tool, seeking investors, online interactions, innovative journey">
+  <meta name="keywords" content="Introduction to Skriza, online discussion revolution, sentiment analysis, user-driven content, seeking investors, online platform vision, meaningful online conversations">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
