--- a/index.html
+++ b/index.html
@@ -124,6 +124,27 @@
   updateTheme();
 
 </script>
+<script type="application/ld+json">
+  {
+    "@context": "http://schema.org",
+    "@type": "Organization",
+    "name": "Skriza",
+    "url": "https://skriza.com",
+    "logo": "https://skriza.com/img/Skriza_Icons-02_transparent.png",
+    "description": "Redefining the way opinions are shared and discussed online. Skriza is actively seeking investors to join the journey of reshaping online interactions.",
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "email": "contact@skriza.com",
+      "contactType": "Customer service"
+    },
+    "sameAs": [
+      "https://github.com/yusuf57rl/skriza",
+      "https://www.instagram.com/skriza_com",
+      "https://discord.gg/U6y3B9ncS8"
+    ]
+  }
+</script>
+
 </body>
 
 </html>
