--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Skriza</title>
   <meta name="title" content="Skriza: Revolutionizing Online Discussions | Seeking Investors">
-  <meta name="description" content="Join Skriza in reshaping online interactions. Discover a unique platform for meaningful online discussions. Investors wanted for our innovative journey.">
+  <meta name="keywords" content="Skriza, online discussions, opinion sharing, investors, online platform, meaningful interactions, digital space">
+  <meta name="description" content="Discover Skriza: A profound platform redefining online opinion sharing. Engage in meaningful discussions and be part of our innovative journey. Investors welcome.">
   <!-- Bootstrap CSS -->
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <!-- Font Awesome -->
@@ -49,10 +50,9 @@
   </div>
 </nav>
 <div class="main-content mt-5 text-center">
-  <h1>Welcome to Skriza <img src="img/Skriza_Icons-02_transparent.png" class="skrizalogo logo-image" alt="logo" id="logoImg">
-  </h1>
+  <h1>Welcome to Skriza: Redefining Online Opinion Sharing</h1> <img src="img/Skriza_Icons-02_transparent.png" class="skrizalogo logo-image" alt="Skriza Logo" id="logoImg">
   <p class="lead">
-    Redefining the way opinions are shared and discussed online.
+    Dive into a digital space where opinions are not just shared but profoundly discussed. Experience the future of online interactions.
   </p>
   <div class="preview-section mb-4 position-relative">
     <button id="prevBtn" class="btn btn-light">&#10094;</button>
@@ -70,8 +70,9 @@
   </div>
 
   <p>
-    We are in the development phase and actively seeking investors to join our journey.
+    Skriza is in its pivotal development phase. We're inviting visionary investors to be part of this transformative journey in reshaping online opinion sharing.
   </p>
+
     <div class="skrsocial social-links">
     <a href="https://github.com/yusuf57rl/skriza" target="_blank" class="btn btn-dark"><i class="fab fa-github"></i> GitHub</a>
     <a href="https://www.instagram.com/skriza_com" target="_blank" class="btn btn-primary"><i class="fab fa-instagram"></i> Instagram</a>
