--- a/introduction.html
+++ b/introduction.html
@@ -10,10 +10,12 @@
   <meta name="keywords" content="online platform investors, online platform investment, online discussions, sentiment analysis tool, seeking investors, online interactions, innovative journey">
   <meta name="keywords" content="Introduction to Skriza, online discussion revolution, sentiment analysis, user-driven content, seeking investors, online platform vision, meaningful online conversations">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="canonical" href="https://skriza.com/introduction" />
 </head>
 
 <body>
@@ -50,31 +52,59 @@
 </nav>
 
 <div class="main-content mt-5 text-center">
-  <h1>Introduction to Skriza</h1>
+
+
+  <h1 class="skrizafont">Introduction of Skriza</h1>
   <p class="lead">
-    Skriza is revolutionizing the way opinions are exchanged and discussed online.
+    The digital platform redefining the essence of online discussions.
   </p>
 
-  <h2>For Investors</h2>
+  <!-- Features or Highlights section -->
+  <div class="row features-section mt-4">
+    <div class="col-md-4">
+      <i class="fas fa-comments fa-3x mb-3"></i>
+      <h3>Meaningful Conversations</h3>
+      <p>Experience discussions that go beyond the surface. Dive deep into the heart of every topic.</p>
+    </div>
+    <div class="col-md-4">
+      <i class="fas fa-brain fa-3x mb-3"></i>
+      <h3>Advanced Analysis</h3>
+      <p>Our sentiment analysis tool ensures every voice is heard, understood, and valued.</p>
+    </div>
+    <div class="col-md-4">
+      <i class="fas fa-users fa-3x mb-3"></i>
+      <h3>Community-Driven</h3>
+      <p>Be part of a community that drives content, creating a unique and engaging platform.</p>
+    </div>
+  </div>
+
+  <h2 class="mt-5">Join Our Vision</h2>
   <p>
-    We are developing a platform that offers a unique perspective on online discussions. Our sentiment analysis tool, combined with user-driven content, allows for rich and meaningful conversations on the internet.
+    At Skriza, we're more than just a platform. We're a movement aiming to reshape the landscape of online interactions.
   </p>
   <p>
-    Our vision is to create a space where users feel valued and heard, and where every opinion can be analyzed and understood in depth.
-  </p>
-  <p>
-    We are looking for partners who share our vision and are interested in investing in our journey to reshape online interactions.
+    Our commitment is to a digital world where opinions are not only shared but deeply understood.
   </p>
 
-  <div class="skrsocial social-links">
+  <h3 class="mt-4">For Investors</h3>
+  <p>
+    We're on a transformative journey and we invite you to be part of it. Join us in making online discussions more meaningful, profound, and insightful.
+  </p>
+
+  <div class="cta-section mt-4">
+    <a href="mailto:contact@skriza.com" class="btn btn-primary mb-2">Get In Touch</a>
+  </div>
+
+  <div class="skrsocial social-links mt-4">
     <a href="https://github.com/yusuf57rl/skriza" target="_blank" class="btn btn-dark"><i class="fab fa-github"></i> GitHub</a>
     <a href="https://www.instagram.com/skriza_com" target="_blank" class="btn btn-primary"><i class="fab fa-instagram"></i> Instagram</a>
     <a href="https://discord.gg/U6y3B9ncS8" target="_blank" class="btn btn-discord"><i class="fab fa-discord"></i> Discord</a>
   </div>
 </div>
+
 <footer class="mt-5">
   <a href="/index" class="text-muted"><i class="fas fa-home"></i> Home </a> |
-  <a href="/imprint" class="text-muted"><i class="fas fa-info-circle"></i> Legal Notice</a> |
+  <a href="/imprint" class="text-muted"><i class="fas fa-info-circle"></i> Legal Notice </a> |
   <a href="/privacy" class="text-muted"><i class="fas fa-user-secret"></i> Privacy Policy</a>
 </footer>
 
