--- a/imprint.html
+++ b/imprint.html
@@ -13,22 +13,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/main.css">
-  <link rel="canonical" href="https://skriza.com/imprint" />
-  <style>
-    h1 {
-      font-size: 1.5rem;
-      margin-top: 1.5rem;
-    }
+  <link rel="canonical" href="https://skriza.com/" />
 
-    h2 {
-      font-size: 1.4rem;
-      margin-top: 1.4rem;
-    }
-
-    p {
-      margin-bottom: 1.5rem;
-    }
-  </style>
 </head>
 
 <body>
