--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     const allTextElements = document.querySelectorAll("h1, p, a, li");
 
     if (isDarkMode) {
-      logoImg.src = "img/Skriza_Icons-02_transparent_lightmode.png";
+      logoImg.src = "img/Skriza_ Icons-02_transparent_lightmode.png";
       allTextElements.forEach(el => el.style.color = "white");
       document.body.style.backgroundColor = "#333";
     } else {
