--- a/502.html
+++ b/502.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Page Not Found</title>
+  <title>Bad Gateway</title>
   <meta name="robots" content="noindex">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/errors.css">
@@ -11,8 +11,8 @@
 
 <body>
 <a href="https://skriza.com"><img src="img/Skriza_Icons-02_transparent.png" alt="Skriza Logo" class="logo"></a>
-<h1>Page Not Found</h1>
-<p>Sorry, but the page you were trying to view does not exist.</p>
+<h1>Bad Gateway</h1>
+<p>The server was acting as a gateway or proxy and received an invalid response from the upstream server.</p>
 <a href="/" class="home-button">Back</a>
 </body>
 
