--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Skriza</title>
   <meta name="title" content="Skriza: Revolutionizing Online Discussions | Seeking Investors">
-  <meta name="keywords"
-        content="Skriza, online discussions, opinion sharing, investors, online platform, meaningful interactions, digital space">
+  <meta name="keywords" content="Skriza, online discussions, opinion sharing">
   <meta name="description"
         content="Discover Skriza: A profound platform redefining online opinion sharing. Engage in meaningful discussions and be part of our innovative journey. Investors welcome.">
   <meta name="msapplication-TileColor" content="#ffffff">
@@ -35,6 +34,39 @@
   <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
   <link rel="manifest" href="favicon/manifest.json">
+
+  <style>
+    .cookie-banner {
+      background-color: var(--bg-color);
+      color: var(--text-color);
+    }
+
+    .cookie-banner a {
+      color: var(--text-color);
+    }
+
+    /* Für den Light Mode */
+    :root {
+      --bg-color: #f8f9fa;
+      --text-color: #343a40;
+    }
+
+    .cookie-banner {
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      background-color: #000000; /* 90% Deckkraft */
+      color: var(--text-color);
+      z-index: 1000;
+    }
+
+    [data-theme="dark"] .cookie-banner {
+      background-color: rgba(52, 58, 64, 0.9); /* 90% Deckkraft im dunklen Modus */
+    }
+
+
+  </style>
+
 </head>
 
 <body>
@@ -154,15 +186,6 @@
   updateTheme();
 
 </script>
-<script type="text/javascript">
-  var _iub = _iub || [];
-  _iub.csConfiguration = {"askConsentAtCookiePolicyUpdate":true,"countryDetection":true,"enableFadp":true,"enableLgpd":true,"enableTcf":true,"enableUspr":true,"floatingPreferencesButtonDisplay":"bottom-right","googleAdditionalConsentMode":true,"lang":"en","lgpdAppliesGlobally":false,"perPurposeConsent":true,"siteId":3284164,"tcfPurposes":{"2":"consent_only","3":"consent_only","4":"consent_only","5":"consent_only","6":"consent_only","7":"consent_only","8":"consent_only","9":"consent_only","10":"consent_only"},"whitelabel":false,"cookiePolicyId":33287692, "banner":{ "acceptButtonDisplay":true,"closeButtonDisplay":false,"customizeButtonDisplay":true,"explicitWithdrawal":true,"listPurposes":true,"logo":"https://skriza.com/img/Skriza_Icons-02_transparent_lightmode.png","position":"float-top-center","rejectButtonDisplay":true }};
-</script>
-<script type="text/javascript" src="https://cs.iubenda.com/autoblocking/3284164.js"></script>
-<script type="text/javascript" src="//cdn.iubenda.com/cs/tcf/stub-v2.js"></script>
-<script type="text/javascript" src="//cdn.iubenda.com/cs/tcf/safe-tcf-v2.js"></script>
-<script type="text/javascript" src="//cdn.iubenda.com/cs/gpp/stub.js"></script>
-<script type="text/javascript" src="//cdn.iubenda.com/cs/iubenda_cs.js" charset="UTF-8" async></script>
 <script type="application/ld+json">
   {
     "@context": "http://schema.org",
@@ -183,7 +206,6 @@
     ]
   }
 </script>
-
 </body>
 
 </html>
