--- a/hacktober.html
+++ b/hacktober.html
@@ -46,6 +46,9 @@
     max-width: 100%;
     max-height: 100%;
   }
+  .spcfrft{
+    padding-top: 2%;
+  }
 </style>
 <body>
 <div class="theme-container"></div>
@@ -112,17 +115,13 @@
 
   <h2 class="mt-5">How to Contribute</h2>
   <p>
-    Follow our GitHub repository and look for issues tagged with <code>Hacktoberfest</code>.
+    Follow our <a href="https://github.com/yusuf57rl/skriza">GitHub repository</a> and look for issues tagged with <code>Hacktoberfest</code>.
   </p>
   <p>
     Make a pull request and become a part of our innovative journey.
   </p>
 
-  <div class="cta-section mt-4">
-    <a href="mailto:contact@skriza.com" class="btn btn-primary mb-2">Get In Touch</a>
-  </div>
-
-  <div class="skrsocial social-links mt-4">
+  <div class="skrsocial social-links mt-4 spcfrft">
     <a href="https://github.com/yusuf57rl/skriza" target="_blank" class="btn btn-dark"><i class="fab fa-github"></i> GitHub</a>
     <a href="https://www.instagram.com/skriza_com" target="_blank" class="btn btn-primary"><i class="fab fa-instagram"></i> Instagram</a>
     <a href="https://discord.gg/U6y3B9ncS8" target="_blank" class="btn btn-discord"><i class="fab fa-discord"></i> Discord</a>
